--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "nshtools",
-   "version": "0.0.2x",
+   "version": "0.0.3",
    "description": "A toolkit for shell scripting with NodeJS.",
    "keywords": [
        "node",
@@ -31,7 +31,7 @@
    ],
    "os": ["linux", "macos"],
    "cpu": ["x86", "ppc", "x86_64"],
-   "engines": ["node >=0.1.32"],
+   "engines": ["node >=0.1.91"],
    "scripts": {
        "uninstall" : "./uninstall-nshtools.js",
        "preinstall" : "./install-nshtools.js",
